# tarch

./: README.md  pyproject.toml
src/tarch/: tarch.tcss  tree.py
