[project]
name = "tarch"
version = "0.1.dev0"
description = "A terminal archiver"
authors = [
    {name = "David Zaslavsky", email = "diazona@ellipsix.net"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
