[project]
name = "tarch"
version = "0.1.dev0"
description = "A terminal archiver"
authors = [
    {name = "David Zaslavsky", email = "diazona@ellipsix.net"},
]
dependencies = ["rich>=13", "textual>=2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
tarch = "tarch.tree:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
